test-suite/success/private_univs.v
Set Universe Polymorphism. Set Printing Universes.
(* Deactivated for now *)

Definition internal_defined@{i j | i < j ?} (A : Type@{i}) : Type@{j}.
  pose(foo:=Type@{_}). (* 1 universe for the let body + 1 for the type *)
  exact A.
  Fail Defined.
Abort.

Definition internal_defined@{i j ?} (A : Type@{i}) : Type@{j}.
pose(foo:=Type@{_}).
exact A.
Defined.
Check internal_defined@{_ _ _}.

Module M.
Lemma internal_qed@{i j|i<=j} (A:Type@{i}) : Type@{j}.
Proof.
  pose (foo := Type@{_}).
  exact A.
Qed.
Check internal_qed@{_ _}.
End M.
Include M.
(* be careful to remove const_private_univs in Include! will be coqchk'd *)

Unset Strict Universe Declaration.
Lemma private_transitivity@{i j} (A:Type@{i}) : Type@{j}.
Proof.
  pose (bar := Type@{_} : Type@{j}).
  pose (foo := Type@{i} : bar).
  exact bar.
Qed.

Definition private_transitivity'@{i j|i + 1 < j} := private_transitivity@{i j}.
Fail Definition dummy@{i j|j <= i ?} := private_transitivity@{i j}.

Unset Private Polymorphic Universes.
Lemma internal_noprivate_qed@{i j|i<=j} (A:Type@{i}) : Type@{j}.
Proof.
  pose (foo := Type@{_}).
  exact A.
  Fail Qed.
Abort.

Lemma internal_noprivate_qed@{i j ?} (A:Type@{i}) : Type@{j}.
Proof.
  pose (foo := Type@{_}).
  exact A.
Qed.
Check internal_noprivate_qed@{_ _ _}.
